[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "casambi-web-controller"
version = "0.2.0"
description = "Using BLE to control a Casambi-based home lighting system via a web interface."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "casambi-bt",
    "bleak"
]

[project.scripts]
casambi-srv = "cli.server:main"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
